# infralight

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  blog-post.md  pyproject.toml
examples/output/: vpc.tf  webserver.sls
examples/saltstack/: appserver.sls  certbot.sls  common.sls  grafana.sls  haproxy.sls  monitoring.sls  nginx.sls  pgbouncer.sls  pm2.sls  postgresql.sls  redis.sls  top.sls  webserver.il.sls
examples/saltstack/grains/: app-01.sls  app-02.sls  cache-01.sls  db-01.sls  lb-01.sls  mon-01.sls  web-01.sls  web-02.sls
examples/saltstack/pillar/: app.sls  common.sls  database.sls  monitoring.sls  top.sls  web.sls
examples/terraform/: vpc.il.tf
src/infralight/: __init__.py  main.py
src/infralight/components/: __init__.py  data_table.py  empty_state.py  file_tree.py  layout.py  panel.py  sidebar.py  stat_card.py  theme.py
src/infralight/controllers/: app_controller.py  dashboard_controller.py  editor_controller.py  output_controller.py  resources_controller.py  salt_overview_controller.py  states_controller.py  vis_controller.py
src/infralight/core/: __init__.py  decorators.py  models.py  parsers.py  renderer.py  scanner.py
src/infralight/models/: state.py  viewmodels.py
src/infralight/pages/: dashboard.py  editor.py  output.py  resources.py  salt_overview.py  states.py  visualization.py
tests/: _test_server.py  conftest.py  test_playwright.py
